objects/Attendance__c.object
<CustomObject>
    <description>Object to be used to record Challengers&apos; attendance during each phase of the programme, and authorised/unauthorised absences.</description>
    <fields>
        <fullName>APM_email__c</fullName>
        <label>APM email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Absence_1__c</fullName>
        <description>Enters whether the YP was late (and how late) or absent</description>
        <inlineHelpText>&quot;Late &lt; 1.5 hours&quot; means: &quot;Was less than 1.5 hours late&quot;
&quot;Late &gt; 3 Hours&quot; means: &quot;Was more than 3 hours late&quot;</inlineHelpText>
        <label>Status 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Late &lt; 1.5 hours</fullName>
                </value>
                <value>
                    <fullName>Late between 1.5 and 3 hours</fullName>
                </value>
                <value>
                    <fullName>Late &gt; 3 Hours</fullName>
                </value>
                <value>
                    <fullName>Absent all day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Absence_1_approval_status__c</fullName>
        <label>Absence 1 approval status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yet to be reviewed</fullName>
                </value>
                <value>
                    <fullName>Absence approved</fullName>
                </value>
                <value>
                    <fullName>Absence unapproved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Absence_1_end_time__c</fullName>
        <inlineHelpText>Enter the date in here as well if relevant (i.e. if different from the start date) 
e.g. 2pm 
OR 
e.g. 2pm on 18th July (if start of absence was on 17th July)</inlineHelpText>
        <label>Absence 1 end time</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Absence_1_reason__c</fullName>
        <label>Absence 1 reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Absence_1_start_time__c</fullName>
        <label>Absence 1 start time</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Absence_2_approval_status__c</fullName>
        <label>Absence 2 approval status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yet to be reviewed</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Absence approved</fullName>
                </value>
                <value>
                    <fullName>Absence unapproved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Absence_2_end_time__c</fullName>
        <inlineHelpText>Enter the date in here as well if relevant (i.e. if different from the start date) 
e.g. 2pm 
OR 
e.g. 2pm on 18th July (if start of absence was on 17th July)</inlineHelpText>
        <label>Absence 2 end time</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Absence_2_reason__c</fullName>
        <label>Absence 2 reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Absence_2_start_time__c</fullName>
        <label>Absence 2 start time</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Absence_2_transport_arrangements__c</fullName>
        <inlineHelpText>Details of option 2 should be included by the PG in the notes about transport methods</inlineHelpText>
        <label>Absence 2 transport arrangements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PG wil collect YP</fullName>
                </value>
                <value>
                    <fullName>Another adult with collect YP</fullName>
                </value>
                <value>
                    <fullName>YP will travel independently</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Absence_3_approval_status__c</fullName>
        <label>Absence 3 approval status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yet to be reviewed</fullName>
                </value>
                <value>
                    <fullName>Absence approved</fullName>
                </value>
                <value>
                    <fullName>Absence unapproved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Absence_3_details_of_transport_arrangmts__c</fullName>
        <description>If not for the whole day, please give clear information about dates, timing and methods of transport involved, including where the parent will meet the YP.</description>
        <label>Absence 3 details of transport arrangmts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Absence_4_details_of_transport_arrangmts__c</fullName>
        <description>If not for the whole day, please give clear information about dates, timing and methods of transport involved, including where the parent will meet the YP.</description>
        <label>Absence 4 details of transport arrangmts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Absence_5_details_of_transport_arrangmts__c</fullName>
        <description>If not for the whole day, please give clear information about dates, timing and methods of transport involved, including where the parent will meet the YP.</description>
        <label>Absence 5 details of transport arrangmts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Absence_policy_URL__c</fullName>
        <defaultValue>&quot;https://docs.google.com/a/the-challenge.org/file/d/0B3Tl_aNXZlVtd3NEZklkRjFZUG8/edit&quot;</defaultValue>
        <label>Absence policy URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Absence_policy_rules__c</fullName>
        <formula>&quot;The rules for graduation are as follows:&quot; &amp; BR()  &amp; BR() &amp;
&quot;Hours to make up are now calculated based on number of absences during 1 section of The Challenge (eg PC)&quot; &amp; BR()  &amp; BR() &amp;
&quot;1 or 2 authorised absences during 1 section:&quot;  &amp; BR()&amp;
&quot;does not have to make up any hours, providing they do not have any hours to make up due to unauthorised absences (see below)&quot; &amp; BR()  &amp; BR() &amp;
&quot;3 authorised absences during 1 section:&quot; &amp; BR()&amp;
&quot;will have to make up 5 hours in order to graduate, plus any hours due to unauthorised absences&quot; &amp; BR()  &amp; BR() &amp;
&quot;4+ authorised absences during 1 section:&quot; 
&amp; BR()&amp;&quot;cannot graduate&quot; &amp; BR()  &amp; BR() &amp;
&quot; -----------------------------------------------------------------------------------------------------------------------------&quot;&amp; BR()  &amp; BR() &amp;
&quot;1 unauthorised absence during 1 section:&quot; &amp; BR()&amp;
&quot;will have to make up 5 hours, plus any hours due to authorised absences&quot; &amp; BR()  &amp; BR() &amp;
&quot;2 unauthorised absence during 1 section:&quot; 
&amp; BR()&amp;&quot;will have to make up 10 hours, plus any hours due to authorised absences&quot; &amp; BR()  &amp; BR() &amp;
&quot;3+ unauthorised absences during 1 section:&quot; &amp; BR()&amp;
&quot;cannot graduate&quot;&amp; BR()  &amp; BR() &amp;
&quot; --------------------------------------------------------------------------------------------------------------------------------------------------&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Absence policy rules</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Absence_request_submitted_by__c</fullName>
        <inlineHelpText>Enter the name of the parent/ legal guardian submitting the request</inlineHelpText>
        <label>Absence request submitted by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Absences__c</fullName>
        <description>This notes any additional absences over the 8 that we have sections for.</description>
        <inlineHelpText>Please note the date, stage of the programme and as many details on the additional absence(s) as possible.</inlineHelpText>
        <label>Additional Absences</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ant_Spaces_on_wave__c</fullName>
        <formula>Wave_Selection__r.Wave__r.YP_place_capacity_absolute_maximum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ant Spaces on wave</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_status__c</fullName>
        <label>Absence 1 approval status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yet to be reviewed</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Absence approved</fullName>
                </value>
                <value>
                    <fullName>Absence unapproved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Reserved_on_Different_Wave__c</fullName>
        <formula>IF( OR( Wave__c =  Contact__r.Assigned_Wave__r.Name , Wave__c =  Contact__r.Reserved_Wave__r.Name), &quot;No&quot;, &quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned/Reserved on Different Wave</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Zone__c</fullName>
        <formula>Contact__r.Assigned_Wave__r.Zone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendance_complete_RCA__c</fullName>
        <formula>OR(
AND(
Wave_Model__c =&quot;Pilot&quot;,

NOT(ISPICKVAL( PC_1__c ,&quot;&quot;)),NOT(ISPICKVAL( PC_2__c ,&quot;&quot;)),NOT(ISPICKVAL( PC_3__c ,&quot;&quot; )),
NOT(ISPICKVAL( PC_4__c ,&quot;&quot;)),NOT(ISPICKVAL( PC_5__c ,&quot;&quot;)),

NOT(ISPICKVAL( TC_1__c ,&quot;&quot;)),NOT(ISPICKVAL( TC_2__c ,&quot;&quot;)),NOT(ISPICKVAL( TC_3__c ,&quot;&quot; )),

NOT(ISPICKVAL( RCD_1__c ,&quot;&quot;)),NOT(ISPICKVAL( RCD_2__c ,&quot;&quot;)),

NOT(ISPICKVAL( RCA_1__c ,&quot;&quot;)),NOT(ISPICKVAL( RCA_2__c ,&quot;&quot;)),
NOT(ISPICKVAL( RCA_3__c ,&quot;&quot;)),NOT(ISPICKVAL( RCA_4__c ,&quot;&quot;))


),

AND(

Contact__r.Assigned_Wave__r.Autumn_wave__c = FALSE,
Contact__r.Assigned_Wave__r.Spring_wave__c = FALSE,


NOT(ISPICKVAL( PC_1__c ,&quot;&quot;)),NOT(ISPICKVAL( PC_2__c ,&quot;&quot;)),NOT(ISPICKVAL( PC_3__c ,&quot;&quot; )),
NOT(ISPICKVAL( PC_4__c ,&quot;&quot;)),NOT(ISPICKVAL( PC_5__c ,&quot;&quot;)),

NOT(ISPICKVAL( TC_1__c ,&quot;&quot;)),NOT(ISPICKVAL( TC_2__c ,&quot;&quot;)),NOT(ISPICKVAL( TC_3__c ,&quot;&quot; )),
NOT(ISPICKVAL( TC_4__c ,&quot;&quot;)),NOT(ISPICKVAL( TC_5__c ,&quot;&quot;)),

NOT(ISPICKVAL( RCD_1__c ,&quot;&quot;)),NOT(ISPICKVAL( RCD_2__c ,&quot;&quot;)),
NOT(ISPICKVAL( RCD_3__c ,&quot;&quot;)),NOT(ISPICKVAL( RCD_4__c ,&quot;&quot;)),

NOT(ISPICKVAL( RCA_1__c ,&quot;&quot;)),NOT(ISPICKVAL( RCA_2__c ,&quot;&quot;)),
NOT(ISPICKVAL( RCA_3__c ,&quot;&quot;)),NOT(ISPICKVAL( RCA_4__c ,&quot;&quot;))


)
,
AND(

OR(
Contact__r.Assigned_Wave__r.Autumn_wave__c = TRUE,
Contact__r.Assigned_Wave__r.Spring_wave__c = TRUE
)
,

NOT(ISPICKVAL( PC_1__c ,&quot;&quot;)),NOT(ISPICKVAL( PC_2__c ,&quot;&quot;)),
NOT(ISPICKVAL( PC_3__c ,&quot;&quot;)),NOT(ISPICKVAL( PC_4__c ,&quot;&quot;)),

NOT(ISPICKVAL( TC_1__c ,&quot;&quot;)),NOT(ISPICKVAL( TC_2__c ,&quot;&quot;)),
NOT(ISPICKVAL( TC_3__c ,&quot;&quot; )),

NOT(ISPICKVAL( RCD_1__c ,&quot;&quot;)),NOT(ISPICKVAL( RCD_2__c ,&quot;&quot;)),

NOT(ISPICKVAL( RCA_1__c ,&quot;&quot;)),NOT(ISPICKVAL( RCA_2__c ,&quot;&quot;))


)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendance complete RCA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendance_complete_RCD__c</fullName>
        <formula>OR(
AND(
ISPICKVAL( Contact__r.Assigned_Wave__r.Pilot__c , &quot;NCS Sequential RCA&quot;),

NOT(ISPICKVAL( PC_1__c ,&quot;&quot;)),NOT(ISPICKVAL( PC_2__c ,&quot;&quot;)),NOT(ISPICKVAL( PC_3__c ,&quot;&quot; )),
NOT(ISPICKVAL( PC_4__c ,&quot;&quot;)),NOT(ISPICKVAL( PC_5__c ,&quot;&quot;)),

NOT(ISPICKVAL( TC_1__c ,&quot;&quot;)),NOT(ISPICKVAL( TC_2__c ,&quot;&quot;)),NOT(ISPICKVAL( TC_3__c ,&quot;&quot; )),
NOT(ISPICKVAL( TC_4__c ,&quot;&quot;)),NOT(ISPICKVAL( TC_5__c ,&quot;&quot;))


),

AND(

Contact__r.Assigned_Wave__r.Autumn_wave__c = FALSE,
Contact__r.Assigned_Wave__r.Spring_wave__c = FALSE,


NOT(ISPICKVAL( PC_1__c ,&quot;&quot;)),NOT(ISPICKVAL( PC_2__c ,&quot;&quot;)),NOT(ISPICKVAL( PC_3__c ,&quot;&quot; )),
NOT(ISPICKVAL( PC_4__c ,&quot;&quot;)),NOT(ISPICKVAL( PC_5__c ,&quot;&quot;)),

NOT(ISPICKVAL( TC_1__c ,&quot;&quot;)),NOT(ISPICKVAL( TC_2__c ,&quot;&quot;)),NOT(ISPICKVAL( TC_3__c ,&quot;&quot; )),
NOT(ISPICKVAL( TC_4__c ,&quot;&quot;)),NOT(ISPICKVAL( TC_5__c ,&quot;&quot;)),

NOT(ISPICKVAL( RCD_1__c ,&quot;&quot;)),NOT(ISPICKVAL( RCD_2__c ,&quot;&quot;)),
NOT(ISPICKVAL( RCD_3__c ,&quot;&quot;)),NOT(ISPICKVAL( RCD_4__c ,&quot;&quot;))

)
,
AND(

OR(
Contact__r.Assigned_Wave__r.Autumn_wave__c = TRUE,
Contact__r.Assigned_Wave__r.Spring_wave__c = TRUE
)
,

NOT(ISPICKVAL( PC_1__c ,&quot;&quot;)),NOT(ISPICKVAL( PC_2__c ,&quot;&quot;)),
NOT(ISPICKVAL( PC_3__c ,&quot;&quot;)),NOT(ISPICKVAL( PC_4__c ,&quot;&quot;)),

NOT(ISPICKVAL( TC_1__c ,&quot;&quot;)),NOT(ISPICKVAL( TC_2__c ,&quot;&quot;)),NOT(ISPICKVAL( TC_3__c ,&quot;&quot; )),

NOT(ISPICKVAL( RCD_1__c ,&quot;&quot;)),NOT(ISPICKVAL( RCD_2__c ,&quot;&quot;))

)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendance complete RCD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorised_Absences_Hours_Allowed_wf__c</fullName>
        <label>Authorised Absences Hours Allowed wf</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Authorised_absences__c</fullName>
        <description>Swapped formula with unauthorised absence field in 2016.
2015 formula can be found here:

https://docs.google.com/a/the-challenge.org/document/d/1njygdiNrkAIYxfiT5rOBq_stvsW9jL1tI1Ccn2yOBDI/edit?usp=sharing</description>
        <formula>Days_Absent_WF__c -  Unauthorised_absences__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Authorised absences</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Autumn_Spring_percentage_complete__c</fullName>
        <formula>Days_Attended__c /11</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Autumn Spring percentage complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Autumn_wave__c</fullName>
        <formula>Wave_Selection__r.Wave__r.Autumn_wave__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Autumn wave</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autumn_wave_del__c</fullName>
        <formula>IF(OR(
 Contact__r.Assigned_Wave__r.Autumn_wave__c = TRUE,
 Contact__r.Assigned_Wave__r.Spring_wave__c = TRUE
),
TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Autumn/Spring wave</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <formula>Contact__r.Assigned_Wave__r.Wave_Cluster__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attendance</relationshipLabel>
        <relationshipName>Attendance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_details__c</fullName>
        <label>Contact details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Phase__c</fullName>
        <formula>IF( Number_of_RCA_days_attended__c  &gt; 0,5,IF( Number_of_RCD_days_attended__c &gt;0,4,IF( Number_of_TC_days_attended__c &gt;0,3,

IF( 
OR(
 Contact__r.Assigned_Wave__r.PC_KO_day__c &lt;= TODAY()
,
Number_of_PC_days_attended__c &gt;0
)
,2,1))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Phase</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Phase_number__c</fullName>
        <label>Current Phase number</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_AM_Medical_forms_shredded_TC__c</fullName>
        <inlineHelpText>Enter the date that you shredded the SM&apos;s set of medical forms.</inlineHelpText>
        <label>Date APL Medical forms shredded TC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_APM_Medical_Froms_shredded_RCA__c</fullName>
        <inlineHelpText>Enter the date that you shredded the medical forms after RCA</inlineHelpText>
        <label>Date APM Medical Forms shredded RCA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_PL_Medical_Froms_Returned_PC__c</fullName>
        <inlineHelpText>Enter the date that the PL&apos;s set of medical forms is returned to you after PC</inlineHelpText>
        <label>Date PL Medical Forms Returned PC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_PL_Medical_Froms_Returned_RCD__c</fullName>
        <inlineHelpText>Enter the date that the PL&apos;s set of medical forms is returned to you after RCD</inlineHelpText>
        <label>Date PL Medical Forms Returned RCD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_PL_Medical_Froms_Returned_TC__c</fullName>
        <inlineHelpText>Enter the date that the PL&apos;s set of medical forms is returned to you after TC</inlineHelpText>
        <label>Date PL Medical Forms Returned TC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SM_Medical_Froms_Returned_PC__c</fullName>
        <inlineHelpText>Enter the date that the SM&apos;s set of medical forms is returned to you after PC</inlineHelpText>
        <label>Date APL Medical Forms Returned PC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_absence_request_received__c</fullName>
        <inlineHelpText>Enter the date the request was received</inlineHelpText>
        <label>Date PG submitted absence rqst</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Absence_2__c</fullName>
        <label>Date of absence 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Absence_3__c</fullName>
        <label>Date of Absence 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_RCA_2nd_absence__c</fullName>
        <label>Date of RCA 2nd absence</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_RCA_Absence__c</fullName>
        <label>Date of RCA absence</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_absence_1__c</fullName>
        <label>Date of absence 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_left_the_programme__c</fullName>
        <label>Day left the programme</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PC 1</fullName>
                </value>
                <value>
                    <fullName>PC 2</fullName>
                </value>
                <value>
                    <fullName>PC 3</fullName>
                </value>
                <value>
                    <fullName>PC 4</fullName>
                </value>
                <value>
                    <fullName>PC 5</fullName>
                </value>
                <value>
                    <fullName>TC 1</fullName>
                </value>
                <value>
                    <fullName>TC 2</fullName>
                </value>
                <value>
                    <fullName>TC 3</fullName>
                </value>
                <value>
                    <fullName>TC 4</fullName>
                </value>
                <value>
                    <fullName>TC 5</fullName>
                </value>
                <value>
                    <fullName>RCD 1</fullName>
                </value>
                <value>
                    <fullName>RCD 2</fullName>
                </value>
                <value>
                    <fullName>RCD 3</fullName>
                </value>
                <value>
                    <fullName>RCD 4</fullName>
                </value>
                <value>
                    <fullName>RCA 1</fullName>
                </value>
                <value>
                    <fullName>RCA 2</fullName>
                </value>
                <value>
                    <fullName>RCA 3</fullName>
                </value>
                <value>
                    <fullName>RCA 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Day_on_programme_that_red_card_awarded__c</fullName>
        <formula>IF (  Max_Day_that_card_was_given_YP_left__c = 1, &quot;PC 1&quot;, IF (Max_Day_that_card_was_given_YP_left__c = 2, &quot;PC 2&quot;, IF (Max_Day_that_card_was_given_YP_left__c = 3, &quot;PC 3&quot;, IF (Max_Day_that_card_was_given_YP_left__c = 4, &quot;PC 4&quot;, IF (Max_Day_that_card_was_given_YP_left__c = 5, &quot;PC 5&quot;, 

IF (Max_Day_that_card_was_given_YP_left__c = 6, &quot;TC 1&quot;, IF (Max_Day_that_card_was_given_YP_left__c = 7, &quot;TC 2&quot;,  IF (Max_Day_that_card_was_given_YP_left__c = 8, &quot;TC 3&quot;,  IF (Max_Day_that_card_was_given_YP_left__c = 9, &quot;TC 4&quot;,  IF (Max_Day_that_card_was_given_YP_left__c = 10, &quot;TC 5&quot;, IF (Max_Day_that_card_was_given_YP_left__c = 11, &quot;RCD 1&quot;, 

IF (Max_Day_that_card_was_given_YP_left__c = 12, &quot;RCD 2&quot;, IF (Max_Day_that_card_was_given_YP_left__c = 13, &quot;RCD 3&quot;, IF (Max_Day_that_card_was_given_YP_left__c = 14, &quot;RCD 4&quot;, 

IF (Max_Day_that_card_was_given_YP_left__c = 15, &quot;RCA 1&quot;, IF (Max_Day_that_card_was_given_YP_left__c = 16, &quot;RCA 2&quot;, IF (Max_Day_that_card_was_given_YP_left__c = 17, &quot;RCA 3&quot;, IF (Max_Day_that_card_was_given_YP_left__c = 18, &quot;RCA 4&quot;, IF (Max_Day_that_card_was_given_YP_left__c = 19, &quot;RCA 4&quot;,  &quot;N/A&quot;)))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day YP left or received red card</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Absent_WF__c</fullName>
        <label>Days Absent</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Attended__c</fullName>
        <formula>IF( ISPICKVAL( PC_1__c , &quot;Attended&quot;), 1, 0) + IF( ISPICKVAL( PC_1__c , &quot;Half Day&quot;), 0.5, 0) 
+ IF( ISPICKVAL( PC_2__c , &quot;Attended&quot;), 1, 0) + IF( ISPICKVAL( PC_2__c , &quot;Half Day&quot;), 0.5, 0) 
+ IF( ISPICKVAL( PC_3__c , &quot;Attended&quot;), 1, 0) + IF( ISPICKVAL( PC_3__c , &quot;Half Day&quot;), 0.5, 0) 
+ IF( ISPICKVAL( PC_4__c , &quot;Attended&quot;), 1, 0) + IF( ISPICKVAL( PC_4__c , &quot;Half Day&quot;), 0.5, 0) 
+ IF( ISPICKVAL( PC_5__c , &quot;Attended&quot;), 1, 0) + IF( ISPICKVAL( PC_5__c , &quot;Half Day&quot;), 0.5, 0)

+IF( ISPICKVAL( TC_1__c , &quot;Attended&quot;), 1, 0) + IF( ISPICKVAL( TC_1__c , &quot;Half Day&quot;), 0.5, 0) 
+ IF( ISPICKVAL( TC_2__c , &quot;Attended&quot;), 1, 0) + IF( ISPICKVAL( TC_2__c , &quot;Half Day&quot;), 0.5, 0) 
+ IF( ISPICKVAL( TC_3__c , &quot;Attended&quot;), 1, 0) + IF( ISPICKVAL( TC_3__c , &quot;Half Day&quot;), 0.5, 0) 
+ IF( ISPICKVAL( TC_4__c , &quot;Attended&quot;), 1, 0) + IF( ISPICKVAL( TC_4__c , &quot;Half Day&quot;), 0.5, 0) 
+ IF( ISPICKVAL( TC_5__c , &quot;Attended&quot;), 1, 0) + IF( ISPICKVAL( TC_5__c , &quot;Half Day&quot;), 0.5, 0)

+IF( ISPICKVAL( RCD_1__c , &quot;Attended&quot;), 1, 0) + IF( ISPICKVAL( RCD_1__c , &quot;Half Day&quot;), 0.5, 0) 
+ IF( ISPICKVAL( RCD_2__c , &quot;Attended&quot;), 1, 0) + IF( ISPICKVAL( RCD_2__c , &quot;Half Day&quot;), 0.5, 0) 
+ IF( ISPICKVAL( RCD_3__c , &quot;Attended&quot;), 1, 0) + IF( ISPICKVAL( RCD_3__c , &quot;Half Day&quot;), 0.5, 0) 
+ IF( ISPICKVAL( RCD_4__c , &quot;Attended&quot;), 1, 0) + IF( ISPICKVAL( RCD_4__c , &quot;Half Day&quot;), 0.5, 0) 

+IF( ISPICKVAL( RCA_1__c , &quot;Attended&quot;), 1, 0) + IF( ISPICKVAL( RCA_1__c , &quot;Half Day&quot;), 0.5, 0) 
+ IF( ISPICKVAL( RCA_2__c , &quot;Attended&quot;), 1, 0) + IF( ISPICKVAL( RCA_2__c , &quot;Half Day&quot;), 0.5, 0) 
+ IF( ISPICKVAL( RCA_3__c , &quot;Attended&quot;), 1, 0) + IF( ISPICKVAL( RCA_3__c , &quot;Half Day&quot;), 0.5, 0) 
+ IF( ISPICKVAL( RCA_4__c , &quot;Attended&quot;), 1, 0) + IF( ISPICKVAL( RCA_4__c , &quot;Half Day&quot;), 0.5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Attended</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_on_wave__c</fullName>
        <formula>If( Wave_Model__c =&quot;Pilot&quot;,14,18)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days on wave</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Details_of_absence_1__c</fullName>
        <label>Details of absence 1</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_absence_2__c</fullName>
        <label>Details of absence 2</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_absence_3__c</fullName>
        <label>Details of absence 3</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Drop_Out_Date__c</fullName>
        <label>Drop Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drop_Out_Reason__c</fullName>
        <label>Drop Out Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Didn&apos;t like NCS / staff member / their team</fullName>
                </value>
                <value>
                    <fullName>Family emergency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Elligable_for_Graduation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Elligable for Graduation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_date_of_absence_1__c</fullName>
        <description>Return date for absence 1</description>
        <inlineHelpText>Enter a valid date</inlineHelpText>
        <label>End date of absence 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_date_of_absence_2__c</fullName>
        <description>Return date of absence</description>
        <inlineHelpText>Please enter a valid date</inlineHelpText>
        <label>End date of absence 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Graduate_despite_no_of_absences__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will allow YPs to graduate REGARDLESS of their attendance. Only to be ticked by Head of programmes and head of innovation. May also be referred to as &quot;Special Case Approved&quot;</inlineHelpText>
        <label>Allow to graduate despite no. absences?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Graduation_Attendance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checked box indicates the YP has attended graduation.</description>
        <inlineHelpText>A checked box indicates the YP has attended graduation.</inlineHelpText>
        <label>Graduation Attendance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Graduation_Eligibility_confirmed_date__c</fullName>
        <description>The date when the YP was confirmed that they became Eligible to graduate</description>
        <inlineHelpText>The date when the YP was confirmed that they became Eligible to graduate</inlineHelpText>
        <label>Graduation Eligibility confirmed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Graduation_Letter_Field_1__c</fullName>
        <description>Overwritten formula from 2015:

https://docs.google.com/a/the-challenge.org/document/d/1R5StDOsMKL9ELLA-RTBIgIaUicBd1OWQHAb4yuwuyns/edit?usp=sharing</description>
        <formula>IF(
OR(
ISPICKVAL(Contact__r.Access_category_2_6__c, &quot;5.1 - full-time support worker required&quot;) , 
ISPICKVAL(Contact__r.Access_category_2_6__c, &quot;5.05 - support worker required, can share with another YP&quot;), 
ISPICKVAL(Contact__r.Access_category_2_6__c, &quot;5.2 - requires 2 full time support workers&quot;),
HTMU_possible__c = FALSE ,
ISPICKVAL(Contact__r.Assigned_Wave__r.Pilot_or_Non_Pilot__c, &quot;Pilot&quot;  ))
,
&quot;Not Eligible&quot;,

IF( Graduate_despite_no_of_absences__c =TRUE, &quot;Eligible&quot;,

IF( RecordType.Name = &quot;Spring/Autumn&quot;,
&quot;Eligible&quot;,

IF(Contact__r.Assigned_Wave__r.RCA_End_Day__c &gt; TODAY(),
&quot;Eligible&quot;,

IF(RCA_Completed__c  = FALSE,&quot;Not Eligible&quot;,&quot;Eligible&quot;)

)))

)</formula>
        <label>Graduation Letter Field SWM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation_Letter_Field_2__c</fullName>
        <description>Overwritten formula from 2015:

https://docs.google.com/a/the-challenge.org/document/d/1R5StDOsMKL9ELLA-RTBIgIaUicBd1OWQHAb4yuwuyns/edit?usp=sharing</description>
        <formula>IF( 
OR( ISPICKVAL(Contact__r.Access_category_2_6__c, &quot;5.1 - full-time support worker required&quot;) , 
ISPICKVAL(Contact__r.Access_category_2_6__c, &quot;5.05 - support worker required, can share with another YP&quot;), 
ISPICKVAL(Contact__r.Access_category_2_6__c, &quot;5.2 - requires 2 full time support workers&quot;),
Graduation_status__c = &quot;INELIGIBLE&quot;, 
ISPICKVAL( Contact__r.Assigned_Wave__r.Wave_Model_Staffing__c , &quot;Standard&quot;)),
&quot;Not Eligible&quot;, 
&quot;Eligible&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Graduation Letter Field Pilot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation_SL_5_Variation_2__c</fullName>
        <formula>IF( 
OR( ISPICKVAL(Contact__r.Access_category_2_6__c, &quot;5.1 - full-time support worker required&quot;) , 
ISPICKVAL(Contact__r.Access_category_2_6__c, &quot;5.05 - support worker required, can share with another YP&quot;), 
ISPICKVAL(Contact__r.Access_category_2_6__c, &quot;5.2 - requires 2 full time support workers&quot;)), 
BR()&amp;&quot;If you had a Support Worker during the programme and want similar 1-to-1 staff support for Ignite, please let us know by phoning 0203 542 2400.&quot; &amp;BR()
, 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Graduation: SL 5 Variation 2</label>
        <type>Text</type>
    </fields>
</CustomObject>